--- a/subsystems/src/assets/i18n/messages.xlf
+++ b/subsystems/src/assets/i18n/messages.xlf
@@ -121,6 +121,69 @@
         <note priority="1" from="description">Loading message</note>
         <note priority="1" from="meaning">message</note>
       </trans-unit>
+      <trans-unit id="subsystem-types-text" datatype="html">
+        <source>Subsystem Types</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/subsystem-action-text/subsystem-action-text.component.ts</context>
+          <context context-type="linenumber">14</context>
+        </context-group>
+        <note priority="1" from="description">Subsystem Types text</note>
+        <note priority="1" from="meaning">text</note>
+      </trans-unit>
+      <trans-unit id="files-text" datatype="html">
+        <source>Files</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/subsystem-action-text/subsystem-action-text.component.ts</context>
+          <context context-type="linenumber">15</context>
+        </context-group>
+        <note priority="1" from="description">Files text</note>
+        <note priority="1" from="meaning">text</note>
+      </trans-unit>
+      <trans-unit id="programs-text" datatype="html">
+        <source>Programs</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/subsystem-action-text/subsystem-action-text.component.ts</context>
+          <context context-type="linenumber">16</context>
+        </context-group>
+        <note priority="1" from="description">Programs text</note>
+        <note priority="1" from="meaning">text</note>
+      </trans-unit>
+      <trans-unit id="transactions-text" datatype="html">
+        <source>Transactions</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/subsystem-action-text/subsystem-action-text.component.ts</context>
+          <context context-type="linenumber">17</context>
+        </context-group>
+        <note priority="1" from="description">Transactions text</note>
+        <note priority="1" from="meaning">text</note>
+      </trans-unit>
+      <trans-unit id="databases-text" datatype="html">
+        <source>Databases</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/subsystem-action-text/subsystem-action-text.component.ts</context>
+          <context context-type="linenumber">18</context>
+        </context-group>
+        <note priority="1" from="description">Databases text</note>
+        <note priority="1" from="meaning">text</note>
+      </trans-unit>
+      <trans-unit id="Configuration-text" datatype="html">
+        <source>Configuration</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/subsystem-action-text/subsystem-action-text.component.ts</context>
+          <context context-type="linenumber">19</context>
+        </context-group>
+        <note priority="1" from="description">configuration text</note>
+        <note priority="1" from="meaning">text</note>
+      </trans-unit>
+      <trans-unit id="routing-codes-text" datatype="html">
+        <source>Routing Codes</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/subsystem-action-text/subsystem-action-text.component.ts</context>
+          <context context-type="linenumber">20</context>
+        </context-group>
+        <note priority="1" from="description">Routing Codes text</note>
+        <note priority="1" from="meaning">text</note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
