--- a/subsystems/src/assets/i18n/messages.ru.xlf
+++ b/subsystems/src/assets/i18n/messages.ru.xlf
@@ -5,7 +5,7 @@
       <trans-unit id="search-placeholder" datatype="html">
         <source>Search</source><target state="new">Поиск</target>
 
-        <note priority="1" from="description">Placeholder for Seach input</note>
+        <note priority="1" from="description">Placeholder for Search input</note>
         <note priority="1" from="meaning">search placeholder</note>
       <context-group purpose="location"><context context-type="sourcefile">src/app/subsystems-root.component.ts</context><context context-type="linenumber">36</context></context-group><context-group purpose="location"><context context-type="sourcefile">src/app/subsystem/subsystem.component.ts</context><context context-type="linenumber">16</context></context-group><context-group purpose="location"><context context-type="sourcefile">src/app/subsystem-action/subsystem-action.component.ts</context><context context-type="linenumber">24</context></context-group></trans-unit>
       <trans-unit id="search-button-title" datatype="html">
