--- a/subsystems/src/assets/i18n/messages.xlf
+++ b/subsystems/src/assets/i18n/messages.xlf
@@ -16,7 +16,7 @@
           <context context-type="sourcefile">src/app/subsystem-action/subsystem-action.component.ts</context>
           <context context-type="linenumber">24</context>
         </context-group>
-        <note priority="1" from="description">Placeholder for Seach input</note>
+        <note priority="1" from="description">Placeholder for Search input</note>
         <note priority="1" from="meaning">search placeholder</note>
       </trans-unit>
       <trans-unit id="search-button-title" datatype="html">
