--- a/subsystems/src/assets/i18n/messages.xlf
+++ b/subsystems/src/assets/i18n/messages.xlf
@@ -6,7 +6,7 @@
         <source>Search</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/subsystems-root.component.ts</context>
-          <context context-type="linenumber">36</context>
+          <context context-type="linenumber">35</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/subsystem/subsystem.component.ts</context>
@@ -23,18 +23,22 @@
         <source>Search</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/subsystems-root.component.ts</context>
-          <context context-type="linenumber">37</context>
+          <context context-type="linenumber">36</context>
         </context-group>
         <note priority="1" from="description">Title of Search button</note>
         <note priority="1" from="meaning">button title</note>
       </trans-unit>
-      <trans-unit id="subsystems-loading-message" datatype="html">
+      <trans-unit id="loading-message" datatype="html">
         <source>
-        Loading <x id="INTERPOLATION" equiv-text="{{rootBreadCrumb}}"/> ...
+        Loading...
       </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/subsystems-root.component.ts</context>
-          <context context-type="linenumber">44</context>
+          <context context-type="linenumber">43</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/subsystem-action/subsystem-action.component.ts</context>
+          <context context-type="linenumber">15</context>
         </context-group>
         <note priority="1" from="description">Text of Loading message</note>
         <note priority="1" from="meaning">loading message</note>
@@ -109,17 +113,6 @@
         </context-group>
         <note priority="1" from="description">Header of Name column</note>
         <note priority="1" from="meaning">column-header</note>
-      </trans-unit>
-      <trans-unit id="subsystem-loading-message" datatype="html">
-        <source>
-      Loading <x id="INTERPOLATION" equiv-text="{{subsystemItemAction.subsystemName}}"/> &gt; <x id="INTERPOLATION_1" equiv-text="{{subsystemItemAction.getItemName()}}"/> &gt; <x id="INTERPOLATION_2" equiv-text="{{subsystemItemAction.action.display}}"/> ...
-    </source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/subsystem-action/subsystem-action.component.ts</context>
-          <context context-type="linenumber">15</context>
-        </context-group>
-        <note priority="1" from="description">Loading message</note>
-        <note priority="1" from="meaning">message</note>
       </trans-unit>
       <trans-unit id="subsystem-types-text" datatype="html">
         <source>Subsystem Types</source>
