--- a/webClient/src/assets/i18n/messages.ja.xlf
+++ b/webClient/src/assets/i18n/messages.ja.xlf
@@ -17,7 +17,7 @@
         <source>
         Loading...
       </source><target state="new">
-        をロード中...
+        ロード中...
       </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/subsystems-root.component.ts</context>
